--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -12,7 +12,7 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 ```{r, include=FALSE}
    # add this chunk to end of mycode.rmd
-   file.rename(from="/Users/dawitgebremichael/projects/R/repdata-data/PA1_template.md", 
+   file.rename(from="PA1_template.md", 
                to="README.md")
 ```
 <h2>Loading and preprocessing the data</h2>
